Remove vavr
Issue-ID: PORTALNG-12

Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>
Change-Id: I13cc4998d082b1dbd3ab1c8986e4525cd177cf89